test/SemanticAnalysis/Class/MemberVarInStaticMethod.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) {
	static void method() {
		// CHECK: .loci:7:3: error: cannot access 'self' in static method
		@value = 100;
	}
}

// CHECK: 1 error generated.
